fixed footer and spacing

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,10 +16,7 @@
   flex-direction: column;
   align-items: center;
   margin: 0 auto;
-}
-
-.home__container {
-  margin: 0 auto;
+  padding-top: 20px;
 }
 
 .home__wrapper {
@@ -265,8 +262,8 @@ th {
   flex-direction: column;
   text-align: center;
   background-color: white;
-  margin-top: 50px;
-  margin-bottom: 50px;
+  margin-bottom: 0;
+  margin-top: 0;
 }
 
 .footer__list {
@@ -275,6 +272,7 @@ th {
   align-self: center;
   list-style-type: none;
   text-align: center;
+  padding: 0;
 }
 
 .footer__list li {
@@ -307,10 +305,20 @@ th {
 }
 
 /* Media Queries ----------------------------------- */
+@media screen and (min-width: 320px) {
+  .home__logo-wrapper {
+    padding-top: 40px;
+  }
+
+  .home__text {
+    margin: 10px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .home__wrapper {
     display: grid;
-    width: 1000px;
+    width: 100%;
     grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
     grid-auto-rows: 450px;
     padding-bottom: 30px;
@@ -331,6 +339,24 @@ th {
   }
 
   .home__card img {
-    max-width: 250px;
+    max-width: 280px;
+  }
+
+  /* Footer ----------------------------------------- */
+  .footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100vw;
+  }
+
+  .footer__email {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  .footer__btn {
+    margin: 0;
   }
 }
